# glimr

./: .gitignore  README.md  pyproject.toml  tox.ini
examples/: cross_validation.ipynb  mnist_example.ipynb
glimr/: __init__.py  analysis.py  keras.py  optimization.py  search.py  utils.py
tests/: test_search.py
